# c-llm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  qwen-dispatch.yml  qwen-scheduled-triage.yml
examples/: main.c
include/: llm.h
site/: index.html
src/: core.c  http.c  http.h  parse.c  parse.h
src/providers/: cerebras.c  claude.c  cohere.c  cohere_embed.c  deepseek.c  fireworks.c  gemini.c  gemini_embed.c  groq.c  huggingface.c  mistral.c  ollama.c  openai.c  openai_compat.c  openai_embed.c  openrouter.c  perplexity.c  replicate.c  sambanova.c  together.c  xai.c
tests/: test_integration.c  test_json_escape.c  test_parsers.c
